--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
+  "description": "WhatsApp бот для ежедневных библейских стихов",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
     "whatsapp-web.js": "^1.23.0",
+    "puppeteer": "^21.5.2",
     "qrcode-terminal": "^0.12.0",
     "node-schedule": "^2.1.1"
   }
