--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "WhatsApp бот для ежедневных библейских стихов",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "postinstall": ""
   },
   "dependencies": {
     "whatsapp-web.js": "^1.23.0",
-    "puppeteer": "^21.5.2",
+    "puppeteer": "^24.15.0",
     "qrcode-terminal": "^0.12.0",
     "node-schedule": "^2.1.1"
   }
