--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "WhatsApp бот для ежедневных библейских стихов",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    "postinstall": ""
+    "start": "node bot.js"
   },
   "dependencies": {
     "whatsapp-web.js": "^1.23.0",
-    "puppeteer": "^24.15.0",
-    "qrcode-terminal": "^0.12.0",
-    "node-schedule": "^2.1.1"
+    "qrcode": "^1.5.3",
+    "node-cron": "^3.0.3"
   }
 }
